cabal-version:      2.4
name:               cash
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             crumbtoo
maintainer:         crumb@duck.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  AST
                    , Parse
                    , Lex
                    , ARM
                    , CodeGen
                    , Cash
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.4.0
                    , graphviz
                    , text
                    , process
                    , mtl
    default-extensions: GADTs
                      , StandaloneDeriving
                      , FlexibleInstances
    default-language: GHC2021

executable cash
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    build-depends:    base ^>=4.16.4.0
                    , cash
    default-language: Haskell2010

